# Hotta_auto_fish

./: .gitignore  LICENSE  OCR.py  README.md  config.py  coordinate.py  data.txt  fish_auto.py  getHSV.py  getHSV_2.py  key_listen.py  main.py  pyproject.toml  q_connect_mouse.py  requirements.txt  test.py  utils.py  在程序中调用 paddleocr 遇到的严重问题.md
UI/: detect_test_annotation_ui.py  detect_test_ui.py  main_ui.py  main_window.py
UI/.ui/: main_window.ui
config/: __init__.py  config.py  path_manager.py
dxgi_capture/: BUILD.md  CMakeLists.txt  dllmain.cpp  pch.cpp  pch.h
src/: OCR.py  detect_logic.py  fish_auto.py  main.py  ocr_main.py  ocr_paddle_.py  ocr_tesseract.py  sub_threads.py
src/utils/: detect_logic.py  dxgi_capture_manager.py  input_manager.py  mss_capture_manager.py  ocr_paddle_.py  ocr_tesseract.py  window_manager.py
test/: build_test.py  capture_example.py  detect_test.py  detect_test_annotation.py  detect_test_run.py  ocr_init_for_build_test.py  ocr_test.py  preprocess_frame_test.py  window_find_test.py
test/output/: 1_res.json
utils/: build.py  get_mouse_coordinate.py  qt_tools.py
